lib/stratiform/res/test/stratiform/tel/neg/e112-child-of-tabulated-row.tel
parent
  # Name  # Age
  Alice   30
    child-of-row
